# uranium-rs

./: .gitignore  Cargo.toml  README.md  TODOS.md  rustfmt.toml
.github/workflows/: rust.yml  update-version.yml
mine_data_structs/: CHANGELOG.md  Cargo.toml  README.md
mine_data_structs/src/: curse.rs  lib.rs  maker.rs  minecraft.rs  rinth.rs
mine_data_structs/src/curse/: curse_modpacks.rs  curse_mods.rs
mine_data_strutcs/src/: minecraft.rs  rinth.rs
mine_data_strutcs/src/curse/: curse_modpacks.rs  curse_mods.rs
mine_data_strutcs/src/rinth/: rinth_mods.rs  rinth_packs.rs
mine_data_strutcs/src/url_maker/: maker.rs
requester/src/: mod_searcher.rs
requester/src/requester/: mod.rs  request_maker.rs
tests/: maker.rs  rinth_downloader.rs
tests/data/minecraft_test1/config/: config.cfg
uranium/: CHANGELOG.md  Cargo.toml  FO.mrpack  README.md  log_12-51-02_15-02-2024.txt  rustfmt.toml
uranium/src/: code_functions.rs  error.rs  hashes.rs  lib.rs  version_checker.rs
uranium/src/downloaders/: curse_downloader.rs  functions.rs  gen_downloader.rs  minecraft_downloader.rs  mod.rs  rinth_downloader.rs  runtime_downloader.rs  updater.rs
uranium/src/modpack_maker/: maker.rs  mod.rs
uranium/src/searcher/: rinth.rs
uranium/src/variables/: constants.rs
uranium/src/zipper/: mod.rs  pack_unzipper.rs  pack_zipper.rs  uranium_structs.rs
uranium/tests/: installation_verification.rs  maker.rs  rinth_downloader.rs  runtime_downloader.rs
uranium/tests/data/: test1.mrpack
