[workspace.dependencies]
serde = { version = "1.0.183", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
tokio = { version = "1.46.1", features = ["full"] }

[workspace]
resolver = "3"
members = ["uranium", "mine_data_structs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
overflow-checks = false
debug = 2
incremental = true
debug-assertions = true
