[package]
name = "mine_data_structs"
version = "1.0.6"
edition = "2024"
authors = ["sergious234 <sergious23@gmail.com>"]
description = "Minecraft data structures"
license = "GPL-2.0"
keywords = ["minecraft"]
repository = "https://github.com/sergious234/uranium-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.139", default-features = false, features = ["alloc", "std"] }
