[package]
name = "uranium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
reqwest.workspace = true
tokio.workspace = true
mine_data_strutcs = {path = "../mine_data_strutcs"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.3"
sha1 = "0.10.5"
hex = "0.4.3"
zip = "2.1.5"
fs_extra = "1.3.0"
murmurhash32 = {git = "https://github.com/gorilla-devs/murmurhash32.git"} 
chrono = "0.4.38"
bytes = "1.6.1"
thiserror = "1.0.40"
simplelog = "0.12.1"
log = { version = "0.4.19", features = ["std"] }
rayon = "1.10.0"
